--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -155,7 +155,7 @@
       "gradient_background_1": "",
       "colors_background_2": "#f3f3f3",
       "gradient_background_2": "",
-      "type_header_font": "twentieth_century_n4",
+      "type_header_font": "tenor_sans_n4",
       "heading_scale": 100,
       "type_body_font": "twentieth_century_n4",
       "body_scale": 100,
